# sherlock

./: Dockerfile  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  false-negative.yml  false-positive.yml  feature-request.yml  site-request.yml
docs/: CODE_OF_CONDUCT.md
