[build-system]
requires = [ "poetry-core>=1.2.0" ]
build-backend = "poetry.core.masonry.api"
# poetry-core 1.8 not available in .fc39. Can upgrade to 1.8.0 at .fc39 EOL

[tool.poetry-version-plugin]
source = "init"

[tool.poetry]
name = "networkeyuel"
# single source of truth for version is __init__.py
version = "0"
description = "Hunt down social media accounts by username across social networks"
license = "MIT"
authors = [
    "network-eyu <networkeyuel@duck.com>"
]
maintainers = [
    "networkeyuel <networkeyuel@gmail.com>",   
]
readme = "docs/pyproj/README.md"
packages = [ { include = "sherlock"} ]
keywords = [ "osint", "reconnaissance", "information gathering" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security"
]
homepage = "https://networkeyuel.github.io/"
repository = "https://github.com/networkeyuel/sherlock"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/networkeyuel/sherlock/issues"

[tool.poetry.dependencies]
python = "^3.8"
certifi = ">=2019.6.16"
colorama = "^0.4.1"
PySocks = "^1.7.0"
requests = "^2.22.0"
requests-futures = "^1.0.0"
stem = "^1.8.0"
torrequest = "^0.1.0"
# pandas can likely be bumped up to ^2.0.0 after fc39 EOL
pandas = ">=1.0.0,<3.0.0"
openpyxl = "^3.0.10"

[tool.poetry.group.dev.dependencies]
jsonschema = "^4.0.0"

[tool.poetry.scripts]
sherlock = 'sherlock.sherlock:main'
